# NavSat

./: .gitignore  README.md  about.html  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
backend/: export_descriptions.py  main.py  services.py  vercel.json
backend/api/: index.py
backend/api/routes/: satellites.py
backend/core/: config.py
backend/models/: satellite.py
backend/services/: satellite_service.py
backend/utils/: satellite_formatter.py
src/: descriptions.js  descriptions.json  main.js  planetDeformation.js  planetVisuals.js  test.js
src/api/: satelliteService.js
src/satellite_tracker_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/services/: locationService.js
src/widgets/: aboutOverlay.js  buildSatelliteMeshes.js  centerToUserLocation.js  countrySelector.js  planetVisuals.js  satelliteLegend.js  startAnimationLoop.js  stormMarkers.js  uiManager.js  userLocationMarker.js
src/widgets/ui/: sections.js  sidebarShell.js  styles.js
