[project]
name = "satellite-tracker-backend"
version = "0.1.0"
description = "FastAPI backend for satellite tracking using Celest"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "pydantic",
    "pydantic-settings",
    "celest",
    "uvicorn",
    "python-dotenv",
    "supabase",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# pip install .